Ensure that the suggestions in the DSE are no cut off. Fixes #1764

--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -381,6 +381,10 @@ fieldset .button {
 	Dropdowns
 --------------------------------------------------------------------------*/
 
+.frame.suggestions {
+	overflow: visible;
+}
+
 .suggestions {
 	overflow: visible;
 }
